apps/player/build_error_3_utf8.txt
2025-11-29T22:23:03.665856Z  INFO Starting trunk 0.21.14
2025-11-29T22:23:03.666297Z  WARN The field `address` in the configuration is deprecated and will be removed in a future version. Migrate to the `addresses` field, which allows adding more than one.
2025-11-29T22:23:03.666696Z  INFO starting build
trunk :    Compiling 
ask_pete_player v0.1.0 (C:
\Users\Trinity\Documents\d
aydream\Ask_Pete\apps\play
er)
At line:1 char:1
+ trunk build > 
build_error_3.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
    Compiling as...te\a   
 pps\player):String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
warning: unused import: 
`ParentRoute`
 --> apps\player\src\app.r
s:3:18
  |
3 |     
components::{ParentRoute, 
Route, Router, Routes},
  |                  
^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of 
`#[warn(unused)]`) on by 
default

warning: unused import: `b
lueprint_grid_background`
 --> apps\player\src\pages
\student_dashboard.rs:2:5
  |
2 |     blueprint_grid_bac
kground, 
chamfered_panel_classes, 
mechanical_button_classes,
  |     
^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0525]: expected a 
closure that implements 
the `FnMut` trait, but 
this closure only 
implements `FnOnce`
   --> apps\player\src\com
ponents\voice_input.rs:10:
17
    |
 10 |       
Effect::new(move |_| {
    |       ----------- 
-^^^^^^^
    |       |           |
    |  
_____|___________this 
closure implements 
`FnOnce`, not `FnMut`
    | |     |
    | |     required by a 
bound introduced by this 
call
 11 | |         if 
is_listening.get() {
...   |
 17 | |                 
if let Some(cb) = 
&on_input {
    | |                   
                 -------- 
closure is `FnOnce` 
because it moves the 
variable `on_input` out 
of its environment
...   |
 22 | |     });
    | |_____- the 
requirement to implement 
`FnMut` derives from here
    |
    = note: required for `
{closure@apps\player\src\c
omponents\voice_input.rs:1
0:17: 10:25}` to 
implement `leptos::prelude
::EffectFunction<(), 
SingleParam>`
note: required by a bound 
in `leptos::prelude::Effec
t::<LocalStorage>::new`
   --> C:\Users\Trinity\.c
argo\registry\src\index.cr
ates.io-1949cf8c6b5b557f\r
eactive_graph-0.2.11\src\e
ffect\effect.rs:168:36
    |
168 |     pub fn new<T, 
M>(mut fun: impl 
EffectFunction<T, M> + 
'static) -> Self
    |                     
               
^^^^^^^^^^^^^^^^^^^^ 
required by this bound in 
`Effect::<LocalStorage>::n
ew`

For more information 
about this error, try 
`rustc --explain E0525`.
warning: 
`ask_pete_player` (lib) 
generated 2 warnings
error: could not compile 
`ask_pete_player` (lib) 
due to 1 previous error; 
2 warnings emitted
2025-11-29T22:23:12.483356Z ERROR error
error from build pipeline

Caused by:
    0: HTML build pipeline failed (1 errors), showing first
    1: error from asset pipeline
    2: running cargo build
    3: error during cargo build execution
    4: cargo call to executable 'cargo' with args: '["build", "--target=wasm32-unknown-unknown", "--manifest-path", "C:\\Users\\Trinity\\Documents\\daydream\\Ask_Pete\\apps\\player\\Cargo.toml"]' returned a bad status: exit code: 101
2025-11-29T22:23:12.483429Z ERROR error from build pipeline
2025-11-29T22:23:12.483435Z  INFO   1: HTML build pipeline failed (1 errors), showing first
2025-11-29T22:23:12.483440Z  INFO   2: error from asset pipeline
2025-11-29T22:23:12.483443Z  INFO   3: running cargo build
2025-11-29T22:23:12.483445Z  INFO   4: error during cargo build execution
2025-11-29T22:23:12.483447Z  INFO   5: cargo call to executable 'cargo' with args: '["build", "--target=wasm32-unknown-unknown", "--manifest-path", "C:\\Users\\Trinity\\Documents\\daydream\\Ask_Pete\\apps\\player\\Cargo.toml"]' returned a bad status: exit code: 101
